feature: add get all credits by customer id endpoint
